Add two projects for portfolio site

--- a/about.html
+++ b/about.html
@@ -36,9 +36,7 @@
             <hr class="nav-divider">
             <div class="nav-links-container">
                 <div class="nav-links">
-                    <a id="case-studies-link" href="index.html">UX Case Studies</a>
-                    <a id="honeyco-link" href="honeyco.html">HoneyCo Beekeeping</a>
-                    <a id="jd-link" href="jd.html">JD.COM Rewards</a>
+                    <a id="case-studies-link" href="index.html">Case Studies</a>
                     <a id="other-projects-link" href="projects.html">Other Projects</a>
                     <a id="about-me-link" class="current-page-link" href="about.html">[ About Me ]</a>
                 </div>
@@ -52,7 +50,7 @@
 
         <div class="content-box about-textbox">
             <div class="intro-1">
-                <p>Hi! My name is Qingyi, a product designer based in Ann Arbor, Michigan.</p>
+                <p>Hi! My name is Qingyi, a product manager and designer based in Ann Arbor, Michigan.</p>
 
                 <p>The products that I have worked on range from consumer-facing apps serving hundreds of thousands of
                     users to gateway websites by a nonprofit that is making a large impact locally. </p>
