--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
                 <hr class="nav-divider">
                 <div class="nav-links-container">
                     <div class="nav-links">
-                        <a id="case-studies-link" class="current-page-link" href="index.html">[ UX Case Studies ]</a>
-                        <a id="honeyco-link" href="honeyco.html">HoneyCo Beekeeping</a>
-                        <a id="jd-link" href="jd.html">JD.COM Rewards</a>
+                        <a id="case-studies-link" class="current-page-link" href="index.html">[ Case Studies ]</a>
                         <a id="other-projects-link" href="projects.html">Other Projects</a>
                         <a id="about-me-link" href="about.html">About Me</a>
                     </div>
@@ -43,11 +41,11 @@
             </nav>
         </header>
         <main id="content">
-            <h1 class="page-title"> UX Case Studies </h1>
+            <h1 class="page-title">Case Studies</h1>
             <hr>
 
             <div class="content-box">
-                <h2>Hi! I am <span id="name">Qingyi [ching-yi] Wang</span>, a product designer.</h2>
+                <h2>Hi! I am <span id="name">Qingyi [ching-yi] Wang</span>. I specialize in product management and design.</h2>
 
                 <p>I am currently pursuing a <a href="https://www.si.umich.edu/">Master of Science - Information degree (focus in UX and HCI)</a> at the University of Michigan, Ann Arbor. I use rapid and iterative design methodologies to resolve UX problems that explore the relationships of space and time.</p>
             </div>
@@ -66,7 +64,23 @@
                         <img class = "case-thumbnail" src="images/jd-portfolio-cover.png" alt="jd-dot-com-case-study">
                     </a>
                     <p class="case-name">JD.COM Rewards</p>
-                    <p class="case-type">UX Design (NDA)</p>
+                    <p class="case-type">Product Management / UX Design (NDA)</p>
+                </div>
+
+                <div class = "case-study case-3">
+                    <a class = "case-study-link" href="ecoworks.html">
+                        <img class = "case-thumbnail" src="images/ecoworks/ecoworks-thumb.png" alt="ecoworks-case-study">
+                    </a>
+                    <p class="case-name">EcoWorks Consulting</p>
+                    <p class="case-type">Consulting / UX Research</p>
+                </div>
+
+                <div class = "case-study case-4">
+                    <a class = "case-study-link" href="timebanks.html">
+                        <img class = "case-thumbnail" src="images/mitb/mitb-thumb.png" alt="timebanks-case-study">
+                    </a>
+                    <p class="case-name">TimeBanks Site Redesign</p>
+                    <p class="case-type">Project Management / UX Research / UX Design</p>
                 </div>
             </div>
             
