--- a/jd.html
+++ b/jd.html
@@ -36,9 +36,7 @@
             <hr class="nav-divider">
             <div class="nav-links-container">
                 <div class="nav-links">
-                    <a id="case-studies-link" href="index.html">UX Case Studies</a>
-                    <a id="honeyco-link" href="honeyco.html">HoneyCo Beekeeping</a>
-                    <a id="jd-link" class="current-page-link" href="jd.html">[ JD.COM Rewards ]</a>
+                    <a id="case-studies-link" href="index.html">- Case Studies -</a>
                     <a id="other-projects-link" href="projects.html">Other Projects</a>
                     <a id="about-me-link" href="about.html">About Me</a>
                 </div>
