--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,7 @@
                 <hr class="nav-divider">
                 <div class="nav-links-container">
                     <div class="nav-links">
-                        <a id="case-studies-link" href="index.html">UX Case Studies</a>
-                        <a id="honeyco-link"   href="honeyco.html">HoneyCo Beekeeping</a>
-                        <a id="jd-link" href="jd.html">JD.COM Rewards</a>
+                        <a id="case-studies-link" href="index.html">Case Studies</a>
                         <a id="other-projects-link" class="current-page-link" href="projects.html">[ Other Projects ]</a>
                         <a id="about-me-link" href="about.html">About Me</a>
                     </div>
@@ -55,7 +53,7 @@
             </div>
             <hr>
             <div class="content-box">
-                <p>I am also a big fan of film photography. I feel like film photography is a great way to slow down and be more deliberate. Each shot costs you quite some money, after all. While I can fire off hundreds of shots on my digital camera in a minute without worries, I have spent an hour taking a single picture on film. The other thing I love is the feeling of clicking a mechanical shutter that has endured decades of time. Check out some pictures that I took from a park next to my home.</p>
+                <p>I am also a big fan of film photography. I feel like film photography is a great way to slow down and be more deliberate. While I can fire off hundreds of shots on my digital camera in a minute without worries, I have spent an hour taking a single picture on film. The other thing I love is the feeling of clicking a mechanical shutter that has endured decades of time. Check out some pictures that I took from a park next to my home.</p>
             </div>
             
             <div class="page-gallery" id="film-gallery">
