--- a/honeyco.html
+++ b/honeyco.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
+    <link href="lightbox-dist/css/lightbox.css" rel="stylesheet" />
     <script src="js/menu.js" defer></script>
+    <script src="lightbox-dist/js/lightbox-plus-jquery.js" defer></script>
     <title> Qingyi Wang - HoneyCo </title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -36,9 +38,7 @@
             <hr class="nav-divider">
             <div class="nav-links-container">
                 <div class="nav-links">
-                    <a id="case-studies-link" href="index.html">UX Case Studies</a>
-                    <a id="honeyco-link" class="current-page-link" href="honeyco.html">[ HoneyCo Beekeeping ]</a>
-                    <a id="jd-link" href="jd.html">JD.COM Rewards</a>
+                    <a id="case-studies-link" href="index.html">- Case Studies -</a>
                     <a id="other-projects-link" href="projects.html">Other Projects</a>
                     <a id="about-me-link" href="about.html">About Me</a>
                 </div>
